# osdev

./: .clang-format  .editorconfig  .gitignore  GNUmakefile  limine.conf
kernel/: linker-x86_64.lds  meson.build  x86_64.cross-file
kernel/include/kernel/: acpi.h  alloc.h  cpu.h  errno.h  intr.h  intrin.h  lapic.h  mm.h  mmu.h  print.h  serial.h  stdlib.h  thread.h  time.h  timer.h  utils.h
kernel/src/: acpi.c  alloc.c  cpu.S  cpu.c  intr.c  intrin.S  isr.S  lapic.c  mm.c  mmu.c  print.c  serial.c  start.c  stdlib.c  thread.S  thread.c  time.c  timer.c  uacpi.c
kernel/subprojects/: flanterm.wrap  freestnd-c-hdrs.wrap  nanoprintf.wrap  uacpi.wrap
kernel/subprojects/packagefiles/flanterm/: meson.build
kernel/subprojects/packagefiles/nanoprintf/: meson.build
